# SPA_project

./: .env.sample  README.md  payments.json  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_preview_alter_lesson_video_url.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_alter_lesson_video_url_subscription.py  0006_course_updated_at.py
payments/: models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment_link_payment_session_id.py  0003_alter_payment_amount_alter_payment_pay_method.py  0004_alter_payment_amount.py  0005_alter_payment_link.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_delete_payment.py
