[tool.poetry]
name = "spa-project"
version = "0.1.0"
description = ""
authors = ["Konstantin <shirshikk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.8"
djangorestframework = "^3.16.1"
python-dotenv = "^1.2.1"
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.11"
pillow = "^12.0.0"


[tool.poetry.group.lint.dependencies]
black = "^25.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
