[tool.poetry]
name = "spa-project"
version = "0.1.0"
description = ""
authors = ["Konstantin <shirshikk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.8"
djangorestframework = "^3.16.1"
python-dotenv = "^1.2.1"
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.11"
pillow = "^12.0.0"
ipython = "^9.7.0"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
drf-yasg = "^1.21.11"
stripe = "^14.1.0"
celery = "^5.6.0"
eventlet = "^0.40.4"
redis = "^7.1.0"


[tool.poetry.group.lint.dependencies]
black = "^25.11.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
